# supa-bass-o-matic

./: .env-sample  .gitignore  INIT.md  build-macos.sh  build.sh  create-icon.js  dev.sh  icons.sh  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: macos-arm-original.yml  macos-arm.yml  macos-x64.yml  publish-macos-arm.yaml  publish-macos-intel.yml  publish-ubuntu-arm.yaml  publish-ubuntu-x86.yml  publish-windows-arm.yml  publish-windows-x86.yml  ubuntu-arm.yml  ubuntu-x64.yml  update-release-links.yml  windows-arm.yml  windows-x64.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/components/: sql-presets.svelte
src/lib/data/: sql-presets.json
src/routes/: +page.svelte
